Fixing layout issues on landscape mobile screens.

--- a/assets/style/reset.css
+++ b/assets/style/reset.css
@@ -9,7 +9,7 @@
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 62.5%;
+    font-size: 60%;
     font: inherit;
     vertical-align: baseline;
   }
